Deleted visibility toggle in js and css files in order to create animated 'rolling' effect (not yet implemented). Changed compPick's indiviual photo styling to functions so they can both be used for both final result and in animation. Fixed play button to only display compPick's result once RPS (aka user's pick) has been chosen.

--- a/rps_style.css
+++ b/rps_style.css
@@ -158,5 +158,4 @@ h4 {
 #compPickPhoto {
     object-fit: none;
     height: 100%;
-	visibility: hidden;
 }
